--- a/0.3/time/input.html
+++ b/0.3/time/input.html
@@ -84,13 +84,13 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="input.js" download>Download</a>
     </div>
-    <div class="editor">define(['pipAPI'],function(APIconstructor) {
+    <div class="editor">define([&quot;pipAPI&quot;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
 	// ### input
 	// The trial input attribute lists the input types that the player is familiar with.
-	// Each input element must include both a handle and an on propery. </br>
+	// Each input element must include both a handle and an on propery. &lt;/br&gt;
 	// The **handle** is the way we refer to this type of input inside the player (in the interaction section), it is basicly the name we give this input.
 	// The **on** parameter describes the specific input that triggers this element.
 
@@ -100,19 +100,19 @@
 		{
 			input: [
 				// Key can take single characters.
-				{handle:'end',on:'keypressed', key:'i'},
+				{handle:&quot;end&quot;,on:&quot;keypressed&quot;, key:&quot;i&quot;},
 				// Or key codes (69 is the key code for e).
-				{handle:'end',on:'keypressed', key:69},
+				{handle:&quot;end&quot;,on:&quot;keypressed&quot;, key:69},
 				// And even arrays
-				{handle:'otherHandle',on:'keypressed', key:['i',69]}
+				{handle:&quot;otherHandle&quot;,on:&quot;keypressed&quot;, key:[&quot;i&quot;,69]}
 			],
-			layout: [{media :{word:'Click e or i to move on'}}],
+			layout: [{media :{word:&quot;Click e or i to move on&quot;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&quot;inputEquals&quot;,value:&quot;end&quot;}],
+					actions: [{type:&quot;endTrial&quot;}]
 				}
 			]
 		},
@@ -120,19 +120,19 @@
 		{
 			input: [
 				// Space
-				{handle:'end',on:'space'},
+				{handle:&quot;end&quot;,on:&quot;space&quot;},
 				// Enter
-				{handle:'end',on:'enter'},
+				{handle:&quot;end&quot;,on:&quot;enter&quot;},
 				// Escape
-				{handle:'end',on:'esc'}
+				{handle:&quot;end&quot;,on:&quot;esc&quot;}
 			],
-			layout: [{media :{word:'Click enter escape or space to move on'}}],
+			layout: [{media :{word:&quot;Click enter escape or space to move on&quot;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&quot;inputEquals&quot;,value:&quot;end&quot;}],
+					actions: [{type:&quot;endTrial&quot;}]
 				}
 			]
 		},
@@ -144,37 +144,37 @@
 		{
 			input: [
 				// **stimHandle** is used to indicate stimuli with the appropriate Handle (in this case "myStimulus").
-				{handle:'end',on:'click',stimHandle:'myStimulus'},
+				{handle:&quot;end&quot;,on:&quot;click&quot;,stimHandle:&quot;myStimulus&quot;},
 				// **element** allows you to insert an html (or even jquery) element for this interaction
-				{handle:'end',on:'click',element:'<div>bump</div>'}
+				{handle:&quot;end&quot;,on:&quot;click&quot;,element:&quot;&lt;div&gt;bump&lt;/div&gt;&quot;}
 			],
-			layout: [{data:{handle:'myStimulus'},media :{word:'Click me too!!'}}],
+			layout: [{data:{handle:&quot;myStimulus&quot;},media :{word:&quot;Click me too!!&quot;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&quot;inputEquals&quot;,value:&quot;end&quot;}],
+					actions: [{type:&quot;endTrial&quot;}]
 				}
 			]
 		},
 
 		// ##### Timeout
 		// React after a set time.
-		// Takes a duration property in miliseconds. </br>
+		// Takes a duration property in miliseconds. &lt;/br&gt;
 		// This input is especialy usefell together with the removeInput action. (see the actions tutorial)
 		{
 			input: [
 				// This trial will end after five seconds.
-				{handle:'end', on: 'timeout', duration: 3000}
+				{handle:&quot;end&quot;, on: &quot;timeout&quot;, duration: 3000}
 			],
-			layout: [{media :{word:'Wait just five seconds'}}],
+			layout: [{media :{word:&quot;Wait just five seconds&quot;}}],
 			interactions: [
 				{
 					// This is where we tell the player to respond to the input.
 					// More about this in the conditions tutorial.
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&quot;inputEquals&quot;,value:&quot;end&quot;}],
+					actions: [{type:&quot;endTrial&quot;}]
 				}
 			]
 		}
