--- a/0.3/time/settings.html
+++ b/0.3/time/settings.html
@@ -91,16 +91,16 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="settings.js" download>Download</a>
     </div>
-    <div class="editor">//# Settings
-// This tutorial will show you how to use the API in order to set the global settings for the PIP. </br>
+    <div class="editor">// # Settings
+// This tutorial will show you how to use the API in order to set the global settings for the PIP. &lt;/br&gt;
 // The `API.addSettings()` function takes two arguments; the first is the property we want to affect (i.e. canvas), and the second is the settings object we want to set in it.
-// Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. </br>
+// Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. &lt;/br&gt;
 // The basic structure of the add settings object is as follows:
 
-//			API.addSettings('settingName',{
+//			API.addSettings(&quot;settingName&quot;,{
 //				// some settings
 //			});
-define(['pipAPI'], function(APIconstructor) {
+define([&quot;pipAPI&quot;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
@@ -109,7 +109,7 @@ define(['pipAPI'], function(APIconstructor) {
 	// The canvas setting controls the general look that the player takes
 	/* canvas */
 	// ##### controling shape
-	API.addSettings('canvas',{
+	API.addSettings(&quot;canvas&quot;,{
 
 		// `maxWidth` the maximum width (in pixels) that the canvas may reach. By default it is set to 500px.
 		maxWidth: 800,
@@ -119,27 +119,27 @@ define(['pipAPI'], function(APIconstructor) {
 		// ##### controling design
 		,
 		// `background` controls the background color of the whole screen
-		background: 'violet',
+		background: &quot;violet&quot;,
 		// `canvasBackground` controls the background color of the player canvas
-		canvasBackground: 'lightblue',
+		canvasBackground: &quot;lightblue&quot;,
 		// `borderWidth` controls the width of the player canvas borders in pixels
 		borderWidth: 4,
 		// `borderColor` controls the color of the player canvas borders
-		borderColor: 'black',
+		borderColor: &quot;black&quot;,
 		// `css` allows you to add your custom css to the canvas element (using the jQuery css API).
 		// This is an advanced way to affect the way your task looks globaly.
 		css: {
-			color:'tomato'
+			color:&quot;tomato&quot;
 		}
 	});
 
 	// ### Logger
-	// The logger section is responsible for logging options. </br>
+	// The logger section is responsible for logging options. &lt;/br&gt;
 	// See documentation if you want to add a custom logger function to replace the default logging action of the player.
 	/* Logger */
 	// `url` is the url to which we send the logged data (ask your IT team what it should be). You should set this if you want to log your data...
-	API.addSettings('logger',{
-		url: 'my.domain.org/controler.php',
+	API.addSettings(&quot;logger&quot;,{
+		url: &quot;my.domain.org/controler.php&quot;,
 		// `pulse` the maximum size of each data pulse to the server (see documentation for more details).
 		// In this case we post to the server every 20 logs.
 		pulse: 20,
@@ -148,16 +148,16 @@ define(['pipAPI'], function(APIconstructor) {
 	});
 
 	// ### Base url
-	// The base url section is responsible for loading images and templates. it allows the user to pick a base url from which to load all images and templates. </br>
+	// The base url section is responsible for loading images and templates. it allows the user to pick a base url from which to load all images and templates. &lt;/br&gt;
 	/* base url */
 	// You can input a single url for use for both images and template.
-	API.addSettings('base_url','media');
+	API.addSettings(&quot;base_url&quot;,&quot;media&quot;);
 	// Or an object with seperate paths for templates and images.
-	API.addSettings('base_url',{
+	API.addSettings(&quot;base_url&quot;,{
 		// `image`: the path to your images
-		image: 'media/images',
+		image: &quot;media/images&quot;,
 		// `template`: the path to your templates
-		template: 'media/templates'
+		template: &quot;media/templates&quot;
 	});
 
 	// ### Redirect
@@ -165,27 +165,27 @@ define(['pipAPI'], function(APIconstructor) {
 	// The redirect setting decides where to redirect the player at the end of the task.
 	// By default, the player simply refreshes the current page.
 	// This option is not used if the endTask hook is set.
-	API.addSettings('redirect','my.domain.org/next/');
+	API.addSettings(&quot;redirect&quot;,&quot;my.domain.org/next/&quot;);
 
 	// ### Meta data
 	/* Meta data */
 	// Meta data is server side data that should be returned with every request to the server.
 	// Any key value pair in the meta data is added to every post the player makes to the server.
 	// In order to create a post with three keys: json, session_id and task_id - you would write something like this:
-	API.addSettings('metaData', {
+	API.addSettings(&quot;metaData&quot;, {
 		session_id	: 9872356,
-		task_id		: '43BTW78'
+		task_id		: &quot;43BTW78&quot;
 	});
 
 	// ### sequence
 	API.addSequence([
 		{
-			input: [{handle:'end', on:'space'}],
-			layout:[{media:{word:'Just a plain trial to show what we can do with settings'}}],
+			input: [{handle:&quot;end&quot;, on:&quot;space&quot;}],
+			layout:[{media:{word:&quot;Just a plain trial to show what we can do with settings&quot;}}],
 			interactions: [
 				{
-					conditions: [{type:'inputEquals',value:'end'}],
-					actions: [{type:'endTrial'}]
+					conditions: [{type:&quot;inputEquals&quot;,value:&quot;end&quot;}],
+					actions: [{type:&quot;endTrial&quot;}]
 				}
 			]
 		}
