--- a/0.3/time/stroop-block.html
+++ b/0.3/time/stroop-block.html
@@ -165,7 +165,7 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="stroop-block.js" download>Download</a>
     </div>
-    <div class="editor">//We've created the building blocks of our task, the *congruent* and *incongruent* trials, now it is time to put them together into a task.
+    <div class="editor">// We&quot;ve created the building blocks of our task, the *congruent* and *incongruent* trials, now it is time to put them together into a task.
 // The tool that controls the structure and flow of the task is called the [mixer](./API.md#mixer).
 // It allows you to duplicate and randomize trials within the sequence.
 
@@ -180,14 +180,14 @@
 // ```javascript
 // API.addSequence([
 // 	{
-// 		mixer: 'random',
+// 		mixer: &quot;random&quot;,
 // 		data: [
-// 			{inherit:'red'},
-// 			{inherit:'red'},
-// 			{inherit:'blue'},
-// 			{inherit:'blue'},
-// 			{inherit:'green'},
-// 			{inherit:'green'}
+// 			{inherit:&quot;red&quot;},
+// 			{inherit:&quot;red&quot;},
+// 			{inherit:&quot;blue&quot;},
+// 			{inherit:&quot;blue&quot;},
+// 			{inherit:&quot;green&quot;},
+// 			{inherit:&quot;green&quot;}
 // 		]
 // 	}
 // ]);
@@ -197,12 +197,12 @@
 
 // ```javascript
 // API.addSequence([
-// 	{inherit:'red'},
-// 	{inherit:'green'},
-// 	{inherit:'blue'},
-// 	{inherit:'green'},
-// 	{inherit:'red'},
-// 	{inherit:'blue'}
+// 	{inherit:&quot;red&quot;},
+// 	{inherit:&quot;green&quot;},
+// 	{inherit:&quot;blue&quot;},
+// 	{inherit:&quot;green&quot;},
+// 	{inherit:&quot;red&quot;},
+// 	{inherit:&quot;blue&quot;}
 // ]);
 // ```
 
@@ -212,12 +212,12 @@
 // ```javascript
 // API.addSequence([
 // 	{
-// 		mixer: 'repeat',
+// 		mixer: &quot;repeat&quot;,
 // 		times: 2,
 // 		data: [
-// 			{inherit:'red'},
-// 			{inherit:'blue'},
-// 			{inherit:'green'}
+// 			{inherit:&quot;red&quot;},
+// 			{inherit:&quot;blue&quot;},
+// 			{inherit:&quot;green&quot;}
 // 		]
 // 	}
 // ]);
@@ -227,12 +227,12 @@
 
 // ```javascript
 // API.addSequence([
-// 	{inherit:'red'},
-// 	{inherit:'blue'},
-// 	{inherit:'green'},
-// 	{inherit:'red'},
-// 	{inherit:'blue'},
-// 	{inherit:'green'}
+// 	{inherit:&quot;red&quot;},
+// 	{inherit:&quot;blue&quot;},
+// 	{inherit:&quot;green&quot;},
+// 	{inherit:&quot;red&quot;},
+// 	{inherit:&quot;blue&quot;},
+// 	{inherit:&quot;green&quot;}
 // ]);
 // ```
 
@@ -248,11 +248,11 @@
 // So far we have inherited the stimuli like this:
 
 // ```javascript
-// API.addTrialSets('red',[{
-// 	inherit:'base',
-// 	data: {group:'red'},
+// API.addTrialSets(&quot;red&quot;,[{
+// 	inherit:&quot;base&quot;,
+// 	data: {group:&quot;red&quot;},
 // 	stimuli: [
-// 		{inherit:'red', handle:'target'}
+// 		{inherit:&quot;red&quot;, handle:&quot;target&quot;}
 // 	]
 // }]);
 // ```
@@ -260,11 +260,11 @@
 // In order to use `exRandom`, all we have to do is this:
 
 // ```javascript
-// API.addTrialSets('red',[{
-// 	inherit:'base',
-// 	data: {group:'red'},
+// API.addTrialSets(&quot;red&quot;,[{
+// 	inherit:&quot;base&quot;,
+// 	data: {group:&quot;red&quot;},
 // 	stimuli: [
-// 		{inherit:{set:'red',type:'exRandom'}, handle:'target'}
+// 		{inherit:{set:&quot;red&quot;,type:&quot;exRandom&quot;}, handle:&quot;target&quot;}
 // 	]
 // }]);
 // ```
@@ -272,71 +272,71 @@
 // Instead of setting `inherit` with the set name, and inheriting randomly we set inherit an object that has two properties; `type` sets the type of inheritance to use (in this case `exRandom`), `set` defines which set should we inherit from.
 
 // ### The script itself
-define(['pipAPI'], function(APIconstructor) {
+define([&quot;pipAPI&quot;], function(APIconstructor) {
 
-	var API = new APIconstructor('stroop');
+	var API = new APIconstructor(&quot;stroop&quot;);
 
 
-	API.addSettings('canvas',{
+	API.addSettings(&quot;canvas&quot;,{
 		textSize: 5
 	});
 
-	API.addStimulusSets('red',[
-		{media:'Red', css:{color:'red'}},
-		{media:'Blue', css:{color:'red'}},
-		{media:'Green', css:{color:'red'}}
+	API.addStimulusSets(&quot;red&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;red&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;red&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;red&quot;}}
 	]);
 
-	API.addStimulusSets('blue',[
-		{media:'Red', css:{color:'blue'}},
-		{media:'Blue', css:{color:'blue'}},
-		{media:'Green', css:{color:'blue'}}
+	API.addStimulusSets(&quot;blue&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;blue&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;blue&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;blue&quot;}}
 	]);
 
-	API.addStimulusSets('green',[
-		{media:'Red', css:{color:'green'}},
-		{media:'Blue', css:{color:'green'}},
-		{media:'Green', css:{color:'green'}}
+	API.addStimulusSets(&quot;green&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;green&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;green&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;green&quot;}}
 	]);
 
-	API.addTrialSets('base',[{
+	API.addTrialSets(&quot;base&quot;,[{
 		input: [
-			{handle:'red',on:'keypressed',key:'1'},
-			{handle:'blue',on:'keypressed',key:'2'},
-			{handle:'green',on:'keypressed',key:'3'}
+			{handle:&quot;red&quot;,on:&quot;keypressed&quot;,key:&quot;1&quot;},
+			{handle:&quot;blue&quot;,on:&quot;keypressed&quot;,key:&quot;2&quot;},
+			{handle:&quot;green&quot;,on:&quot;keypressed&quot;,key:&quot;3&quot;}
 		],
 		layout: [
-			{media:'1',location:{left:2,top:2},css:{background:'red',padding:'2%',fontSize:'1.5em'}},
-			{media:'2',location:{top:2},css:{background:'blue',padding:'2%',fontSize:'1.5em'}},
-			{media:'3',location:{right:2,top:2},css:{background:'green',padding:'2%',fontSize:'1.5em'}}
+			{media:&quot;1&quot;,location:{left:2,top:2},css:{background:&quot;red&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}},
+			{media:&quot;2&quot;,location:{top:2},css:{background:&quot;blue&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}},
+			{media:&quot;3&quot;,location:{right:2,top:2},css:{background:&quot;green&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}}
 		],
 		interactions: [
 			/* Display the target stimulus. */
 			{
-				conditions:[{type:'begin'}],
-				actions: [{type:'showStim', handle: 'target'}]
+				conditions:[{type:&quot;begin&quot;}],
+				actions: [{type:&quot;showStim&quot;, handle: &quot;target&quot;}]
 			},
 			/* Correct response actions */
 			{
 				conditions: [
-					{type:'inputEqualsTrial',property:'group'}
+					{type:&quot;inputEqualsTrial&quot;,property:&quot;group&quot;}
 				],
 				actions: [
-					{type:'setTrialAttr', setter:{score:1}},
-					{type:'log'},
-					{type:'endTrial'}
+					{type:&quot;setTrialAttr&quot;, setter:{score:1}},
+					{type:&quot;log&quot;},
+					{type:&quot;endTrial&quot;}
 				]
 			},
 			/* Incorrect response actions */
 			{
 				conditions: [
-					{type:'inputEqualsTrial',property:'group',negate:true},
-					{type:'inputEquals',value:['red','blue','green']}
+					{type:&quot;inputEqualsTrial&quot;,property:&quot;group&quot;,negate:true},
+					{type:&quot;inputEquals&quot;,value:[&quot;red&quot;,&quot;blue&quot;,&quot;green&quot;]}
 				],
 				actions: [
-					{type:'setTrialAttr', setter:{score:0}},
-					{type:'log'},
-					{type:'endTrial'}
+					{type:&quot;setTrialAttr&quot;, setter:{score:0}},
+					{type:&quot;log&quot;},
+					{type:&quot;endTrial&quot;}
 				]
 			}
 		]
@@ -345,27 +345,27 @@ define(['pipAPI'], function(APIconstructor) {
 	// ### Advanced inheritance
 	// Here, we put `exRandom` into use.
 
-	API.addTrialSets('red',[{
-		inherit:'base',
-		data: {group:'red'},
+	API.addTrialSets(&quot;red&quot;,[{
+		inherit:&quot;base&quot;,
+		data: {group:&quot;red&quot;},
 		stimuli: [
-			{inherit:{set:'red',type:'exRandom'}, handle:'target'}
+			{inherit:{set:&quot;red&quot;,type:&quot;exRandom&quot;}, handle:&quot;target&quot;}
 		]
 	}]);
 
-	API.addTrialSets('blue',[{
-		inherit:'base',
-		data: {group:'blue'},
+	API.addTrialSets(&quot;blue&quot;,[{
+		inherit:&quot;base&quot;,
+		data: {group:&quot;blue&quot;},
 		stimuli: [
-			{inherit:{set:'blue',type:'exRandom'}, handle:'target'}
+			{inherit:{set:&quot;blue&quot;,type:&quot;exRandom&quot;}, handle:&quot;target&quot;}
 		]
 	}]);
 
-	API.addTrialSets('green',[{
-		inherit:'base',
-		data: {group:'green'},
+	API.addTrialSets(&quot;green&quot;,[{
+		inherit:&quot;base&quot;,
+		data: {group:&quot;green&quot;},
 		stimuli: [
-			{inherit:{set:'green',type:'exRandom'}, handle:'target'}
+			{inherit:{set:&quot;green&quot;,type:&quot;exRandom&quot;}, handle:&quot;target&quot;}
 		]
 	}]);
 
@@ -378,16 +378,16 @@ define(['pipAPI'], function(APIconstructor) {
 	API.addSequence([
 		/* random mixer */
 		{
-			mixer: 'random',
+			mixer: &quot;random&quot;,
 			data: [
 				/* repeat mixer */
 				{
-					mixer: 'repeat',
+					mixer: &quot;repeat&quot;,
 					times: 20,
 					data: [
-						{inherit:'red'},
-						{inherit:'blue'},
-						{inherit:'green'}
+						{inherit:&quot;red&quot;},
+						{inherit:&quot;blue&quot;},
+						{inherit:&quot;green&quot;}
 					]
 				}
 			]
