--- a/0.3/time/stroop-inheritance.html
+++ b/0.3/time/stroop-inheritance.html
@@ -121,10 +121,10 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="stroop-inheritance.js" download>Download</a>
     </div>
-    <div class="editor">//This section of the tutorial deals with using the inheritance features of the player in order to keep complex tasks as simple as possible.
+    <div class="editor">// This section of the tutorial deals with using the inheritance features of the player in order to keep complex tasks as simple as possible.
 
 // ### Data
-// Before we dive into the actual practice of inheritance, it is important to understand the function and use of the trial's `data` property.
+// Before we dive into the actual practice of inheritance, it is important to understand the function and use of the trial&quot;s `data` property.
 // The `data` property holds an object that keeps information that has to do with this trial.
 // Remember that all the properties and values of `data` are arbitrary, and you can use them in any way that is convenient to you.
 
@@ -135,19 +135,19 @@
 
 // ```javascript
 // {
-// 	data:{group:'congruent'}
+// 	data:{group:&quot;congruent&quot;}
 // }
 // ```
 
 // Furthermore, the data object may be used by player interactions.
-// The condition `inputEqualsTrial` compares the input handle to a specified property of the trial's data object.
+// The condition `inputEqualsTrial` compares the input handle to a specified property of the trial&quot;s data object.
 // This means that we can create interactions that behave a bit differently as a function of trial type as defined in the data object.
 // The following interaction fires when the input handle is equal to the *group* property of the data object:
 
 // ```javascript
 // {
 // 	conditions: [
-// 		{type:'inputEqualsTrial',property:'group'}
+// 		{type:&quot;inputEqualsTrial&quot;,property:&quot;group&quot;}
 // 	],
 // 	actions: [
 // 		/* Some cool stuff of you own design */
@@ -165,17 +165,17 @@
 // 		/* The conditions of your choice */
 // 	],
 // 	actions: [
-// 		{type:'setTrialAttr', setter:{score:1}}
+// 		{type:&quot;setTrialAttr&quot;, setter:{score:1}}
 // 	]
 // }
 // ```
 
-define(['pipAPI'], function(APIconstructor) {
+define([&quot;pipAPI&quot;], function(APIconstructor) {
 
-	var API = new APIconstructor('stroop');
+	var API = new APIconstructor(&quot;stroop&quot;);
 
 
-	API.addSettings('canvas',{
+	API.addSettings(&quot;canvas&quot;,{
 		textSize: 5
 	});
 
@@ -188,22 +188,22 @@ define(['pipAPI'], function(APIconstructor) {
 	// the third is the type of the trial as reported to the server.
 	// What we will do is create separate trials that hold these differences and inherit the base trial that has the rest of the trial specifications.
 
-	API.addStimulusSets('red',[
-		{media:'Red', css:{color:'red'}},
-		{media:'Blue', css:{color:'red'}},
-		{media:'Green', css:{color:'red'}}
+	API.addStimulusSets(&quot;red&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;red&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;red&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;red&quot;}}
 	]);
 
-	API.addStimulusSets('blue',[
-		{media:'Red', css:{color:'blue'}},
-		{media:'Blue', css:{color:'blue'}},
-		{media:'Green', css:{color:'blue'}}
+	API.addStimulusSets(&quot;blue&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;blue&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;blue&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;blue&quot;}}
 	]);
 
-	API.addStimulusSets('green',[
-		{media:'Red', css:{color:'green'}},
-		{media:'Blue', css:{color:'green'}},
-		{media:'Green', css:{color:'green'}}
+	API.addStimulusSets(&quot;green&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;green&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;green&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;green&quot;}}
 	]);
 
 	// ### Evolving the stroop trial (trials)
@@ -211,78 +211,78 @@ define(['pipAPI'], function(APIconstructor) {
 	// We create a base trial that will be the base for anything further that we do.
 
 	// The primary change that we made is in evaluating the correct response.
-	// `inputEqualsTrial` compares the input handle to the (trial's) data property *group*.
+	// `inputEqualsTrial` compares the input handle to the (trial&quot;s) data property *group*.
 	// If they are the same then the answer is correct. The incorrect response answer reflects the same principle, only negated.
 
 
-	API.addTrialSets('base',[{
+	API.addTrialSets(&quot;base&quot;,[{
 		input: [
-			{handle:'red',on:'keypressed',key:'1'},
-			{handle:'blue',on:'keypressed',key:'2'},
-			{handle:'green',on:'keypressed',key:'3'}
+			{handle:&quot;red&quot;,on:&quot;keypressed&quot;,key:&quot;1&quot;},
+			{handle:&quot;blue&quot;,on:&quot;keypressed&quot;,key:&quot;2&quot;},
+			{handle:&quot;green&quot;,on:&quot;keypressed&quot;,key:&quot;3&quot;}
 		],
 		layout: [
-			{media:'1',location:{left:2,top:2},css:{background:'red',padding:'2%',fontSize:'1.5em'}},
-			{media:'2',location:{top:2},css:{background:'blue',padding:'2%',fontSize:'1.5em'}},
-			{media:'3',location:{right:2,top:2},css:{background:'green',padding:'2%',fontSize:'1.5em'}}
+			{media:&quot;1&quot;,location:{left:2,top:2},css:{background:&quot;red&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}},
+			{media:&quot;2&quot;,location:{top:2},css:{background:&quot;blue&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}},
+			{media:&quot;3&quot;,location:{right:2,top:2},css:{background:&quot;green&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}}
 		],
 		interactions: [
 			/* Display the target stimulus. */
 			{
-				conditions:[{type:'begin'}],
-				actions: [{type:'showStim', handle: 'target'}]
+				conditions:[{type:&quot;begin&quot;}],
+				actions: [{type:&quot;showStim&quot;, handle: &quot;target&quot;}]
 			},
 			/* Correct response actions */
 			{
 				conditions: [
-					{type:'inputEqualsTrial',property:'group'}
+					{type:&quot;inputEqualsTrial&quot;,property:&quot;group&quot;}
 				],
 				actions: [
-					{type:'setTrialAttr', setter:{score:1}},
-					{type:'log'},
-					{type:'endTrial'}
+					{type:&quot;setTrialAttr&quot;, setter:{score:1}},
+					{type:&quot;log&quot;},
+					{type:&quot;endTrial&quot;}
 				]
 			},
 			/* Incorrect response actions */
 			{
 				conditions: [
-					{type:'inputEqualsTrial',property:'group',negate:true},
-					{type:'inputEquals',value:['red','blue','green']}
+					{type:&quot;inputEqualsTrial&quot;,property:&quot;group&quot;,negate:true},
+					{type:&quot;inputEquals&quot;,value:[&quot;red&quot;,&quot;blue&quot;,&quot;green&quot;]}
 				],
 				actions: [
-					{type:'setTrialAttr', setter:{score:0}},
-					{type:'log'},
-					{type:'endTrial'}
+					{type:&quot;setTrialAttr&quot;, setter:{score:0}},
+					{type:&quot;log&quot;},
+					{type:&quot;endTrial&quot;}
 				]
 			}
 		]
 	}]);
 
-	// We've created three trials here, one for each of the trial types (colors), and set them into `trialSets` so they can later be inherited themselves.
-	// Note that we haven't made any changes to the interactions.
+	// We&quot;ve created three trials here, one for each of the trial types (colors), and set them into `trialSets` so they can later be inherited themselves.
+	// Note that we haven&quot;t made any changes to the interactions.
 	// We will change the interactions in the base trial so that they depend on the trial type (as set in data *group*).
 
-	API.addTrialSets('red',[{
-		inherit:'base',
-		data: {group:'red'},
+	API.addTrialSets(&quot;red&quot;,[{
+		inherit:&quot;base&quot;,
+		data: {group:&quot;red&quot;},
 		stimuli: [
-			{inherit:'red', handle:'target'}
+			{inherit:&quot;red&quot;, handle:&quot;target&quot;}
 		]
 	}]);
 
-	API.addTrialSets('blue',[{
-		inherit:'base',
-		data: {group:'blue'},
+	API.addTrialSets(&quot;blue&quot;,[{
+		inherit:&quot;base&quot;,
+		data: {group:&quot;blue&quot;},
 		stimuli: [
-			{inherit:'blue', handle:'target'}
+			{inherit:&quot;blue&quot;, handle:&quot;target&quot;}
 		]
 	}]);
 
-	API.addTrialSets('green',[{
-		inherit:'base',
-		data: {group:'green'},
+	API.addTrialSets(&quot;green&quot;,[{
+		inherit:&quot;base&quot;,
+		data: {group:&quot;green&quot;},
 		stimuli: [
-			{inherit:'green', handle:'target'}
+			{inherit:&quot;green&quot;, handle:&quot;target&quot;}
 		]
 	}]);
 
@@ -290,9 +290,9 @@ define(['pipAPI'], function(APIconstructor) {
 	// What we have left now, is to put the task together. Here we display a congruent and incongruent trial consequently.
 
 	API.addSequence([
-		{inherit:'red'},
-		{inherit:'blue'},
-		{inherit:'green'}
+		{inherit:&quot;red&quot;},
+		{inherit:&quot;blue&quot;},
+		{inherit:&quot;green&quot;}
 	]);
 
 	// We can go ahead now, and create our tasks manually by inserting trials at any order that we want, but that would be static and hard to maintain.
