--- a/0.3/time/stroop-interactions.html
+++ b/0.3/time/stroop-interactions.html
@@ -89,46 +89,46 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="stroop-interactions.js" download>Download</a>
     </div>
-    <div class="editor">//So far we created the very general way that the task looks.
+    <div class="editor">// So far we created the very general way that the task looks.
 // The next step is to create interactions that will make the player interactive.
 // We will first set up the `input` and `stimuli` properties of the trial and then dig into `interactions`.
 
 // We will keep extending the trial we started in the setup section.
 // For now we will develop the *red* stimulus trial, later on we will show how to apply it to the other trials as well.
 
-define(['pipAPI'], function(APIconstructor) {
+define([&quot;pipAPI&quot;], function(APIconstructor) {
 
-	var API = new APIconstructor('stroop');
+	var API = new APIconstructor(&quot;stroop&quot;);
 
 
-	API.addSettings('canvas',{
+	API.addSettings(&quot;canvas&quot;,{
 		textSize: 5
 	});
 
-	API.addStimulusSets('red',[
-		{media:'Red', css:{color:'red'}},
-		{media:'Blue', css:{color:'red'}},
-		{media:'Green', css:{color:'red'}}
+	API.addStimulusSets(&quot;red&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;red&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;red&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;red&quot;}}
 	]);
 
-	API.addStimulusSets('blue',[
-		{media:'Red', css:{color:'blue'}},
-		{media:'Blue', css:{color:'blue'}},
-		{media:'Green', css:{color:'blue'}}
+	API.addStimulusSets(&quot;blue&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;blue&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;blue&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;blue&quot;}}
 	]);
 
-	API.addStimulusSets('green',[
-		{media:'Red', css:{color:'green'}},
-		{media:'Blue', css:{color:'green'}},
-		{media:'Green', css:{color:'green'}}
+	API.addStimulusSets(&quot;green&quot;,[
+		{media:&quot;Red&quot;, css:{color:&quot;green&quot;}},
+		{media:&quot;Blue&quot;, css:{color:&quot;green&quot;}},
+		{media:&quot;Green&quot;, css:{color:&quot;green&quot;}}
 	]);
 
 	API.addSequence([
 		{
 			layout: [
-				{media:'1',location:{left:2,top:2},css:{background:'red',padding:'2%',fontSize:'1.5em'}},
-				{media:'2',location:{top:2},css:{background:'blue',padding:'2%',fontSize:'1.5em'}},
-				{media:'3',location:{right:2,top:2},css:{background:'green',padding:'2%',fontSize:'1.5em'}}
+				{media:&quot;1&quot;,location:{left:2,top:2},css:{background:&quot;red&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}},
+				{media:&quot;2&quot;,location:{top:2},css:{background:&quot;blue&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}},
+				{media:&quot;3&quot;,location:{right:2,top:2},css:{background:&quot;green&quot;,padding:&quot;2%&quot;,fontSize:&quot;1.5em&quot;}}
 			],
 
 			// ### Input
@@ -144,9 +144,9 @@ define(['pipAPI'], function(APIconstructor) {
 			// In this case we trigger the *red* event when `1` is pressed, the *blue* event when `2` is pressed and so on.
 
 			input: [
-				{handle:'red',on:'keypressed',key:'1'},
-				{handle:'blue',on:'keypressed',key:'2'},
-				{handle:'green',on:'keypressed',key:'3'}
+				{handle:&quot;red&quot;,on:&quot;keypressed&quot;,key:&quot;1&quot;},
+				{handle:&quot;blue&quot;,on:&quot;keypressed&quot;,key:&quot;2&quot;},
+				{handle:&quot;green&quot;,on:&quot;keypressed&quot;,key:&quot;3&quot;}
 			],
 
 			// **Protip**: You can use key codes instead of letters, that way you can use special keys like the left (37) and right (38) arrow keys
@@ -155,15 +155,15 @@ define(['pipAPI'], function(APIconstructor) {
 			// ### Stimuli
 			// The stimuli in the `layout` property are static; this means that interactions do not affect them.
 			// If we want stimuli to be interactive we put them into a separate array called `stimuli`.
-			// The advantage of this separation is that you never have to worry that you're going to break the canvas layout when creating interactions.
+			// The advantage of this separation is that you never have to worry that you&quot;re going to break the canvas layout when creating interactions.
 
 			// We will very simply move the target stimulus into the `stimuli` property:
 
 			stimuli:[
-				{inherit:'red', handle:'target'}
+				{inherit:&quot;red&quot;, handle:&quot;target&quot;}
 			],
 
-			// Note that we extend every stimulus we inherit with the (arbitrary) handle `'target'`,
+			// Note that we extend every stimulus we inherit with the (arbitrary) handle `&quot;target&quot;`,
 			// this is necessary so that the various actions in `interactions` can know which stimulus we are referring to.
 
 			// ### Interactions
@@ -186,20 +186,20 @@ define(['pipAPI'], function(APIconstructor) {
 			// Stimuli set into `stimuli` are hidden by default.
 
 			// The first interaction we deal with displays the target stimulus as soon as the trial starts.
-			// `begin` is a special event that is fired only once; when a trial starts. In order to listen to it we use the condition object `{type:'begin'}`.
-			// In this case, the associated action is `showStim`; this action tells the player to display the a stimulus that has the handle `'target'`
-			// (you can recall that we extended the target stimulus with the handle `'target'`).]
+			// `begin` is a special event that is fired only once; when a trial starts. In order to listen to it we use the condition object `{type:&quot;begin&quot;}`.
+			// In this case, the associated action is `showStim`; this action tells the player to display the a stimulus that has the handle `&quot;target&quot;`
+			// (you can recall that we extended the target stimulus with the handle `&quot;target&quot;`).]
 
 			// Stimuli set into `stimuli` are hidden by default.
 			// The first interaction we deal with displays the target stimulus as soon as the trial starts.
-			// `begin` is a special event that is fired only once; when a trial starts. In order to listen to it we use the condition object `{type:'begin'}`.
-			// In this case, the associated action is `showStim`; this action tells the player to display the a stimulus that has the handle `'target'`
-			// (you can recall that we extended the target stimulus with the handle `'target'`).]
+			// `begin` is a special event that is fired only once; when a trial starts. In order to listen to it we use the condition object `{type:&quot;begin&quot;}`.
+			// In this case, the associated action is `showStim`; this action tells the player to display the a stimulus that has the handle `&quot;target&quot;`
+			// (you can recall that we extended the target stimulus with the handle `&quot;target&quot;`).]
 
 			interactions: [
 				{
-					conditions:[{type:'begin'}],
-					actions: [{type:'showStim', handle: 'target'}]
+					conditions:[{type:&quot;begin&quot;}],
+					actions: [{type:&quot;showStim&quot;, handle: &quot;target&quot;}]
 				},
 
 				// Next we will add interactions that deal with the response to the user interaction:
@@ -214,12 +214,12 @@ define(['pipAPI'], function(APIconstructor) {
 
 				{
 					conditions: [
-						{type:'inputEquals',value:'red'}
+						{type:&quot;inputEquals&quot;,value:&quot;red&quot;}
 					],
 					actions: [
-						{type:'setTrialAttr', setter:{score:1}},
-						{type:'log'},
-						{type:'endTrial'}
+						{type:&quot;setTrialAttr&quot;, setter:{score:1}},
+						{type:&quot;log&quot;},
+						{type:&quot;endTrial&quot;}
 					]
 				},
 
@@ -229,13 +229,13 @@ define(['pipAPI'], function(APIconstructor) {
 
 				{
 					conditions: [
-						{type:'inputEquals',value:'red', negate:true},
-						{type:'inputEquals', value: ['red','blue','green']}
+						{type:&quot;inputEquals&quot;,value:&quot;red&quot;, negate:true},
+						{type:&quot;inputEquals&quot;, value: [&quot;red&quot;,&quot;blue&quot;,&quot;green&quot;]}
 					],
 					actions: [
-						{type:'setTrialAttr', setter:{score:0}},
-						{type:'log'},
-						{type:'endTrial'}
+						{type:&quot;setTrialAttr&quot;, setter:{score:0}},
+						{type:&quot;log&quot;},
+						{type:&quot;endTrial&quot;}
 					]
 				}
 
@@ -254,7 +254,7 @@ define(['pipAPI'], function(APIconstructor) {
 });
 
 // ### Epilogue (of sorts)
-// We've created a single congruent trial for a Stroop task.
+// We&quot;ve created a single congruent trial for a Stroop task.
 // The next natural step is to copy this trial and change every place where it refers to a congruent task into incongruent and presto! we have two trials ready for action.
 // You can do that, and it would definately work, but there are several disadvantages to this approach.
 // First, every change you want to make to the trial, you will have to make to every copy of the trial that you have.
