--- a/0.3/time/trial.html
+++ b/0.3/time/trial.html
@@ -87,10 +87,10 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="trial.js" download>Download</a>
     </div>
-    <div class="editor">//All PIP source files are wrapped inside define function
+    <div class="editor">// All PIP source files are wrapped inside define function
 // This function gives you access to the API object that we use to build the various tasks
 // If you want to know more about this, you can read up about AMD and check out http://requirejs.org/
-define(['pipAPI'], function(APIconstructor) {
+define([&quot;pipAPI&quot;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
@@ -106,15 +106,15 @@ define(['pipAPI'], function(APIconstructor) {
 			// It can be used to keep track of trial types, blocks, score etc.
 			// It becomes incrementaly usefull with more advance features of the PIP.
 			data: {
-				myProperty: 'information',
-				myOtherProperty: 'more information'
+				myProperty: &quot;information&quot;,
+				myOtherProperty: &quot;more information&quot;
 			},
 
 			// The input property of the trial is used to create the user interface.
 			// In this case we tell the player to listen for hits on the space key.
 			// Later on we will tell the player what to do when the space button is clicked.
 			input: [
-				{handle:'space',on:'space'}
+				{handle:&quot;space&quot;,on:&quot;space&quot;}
 			],
 
 			// The layout property of the trial is used to display statick stimuli.
@@ -122,15 +122,15 @@ define(['pipAPI'], function(APIconstructor) {
 			// This property holds an array of stimuli objects, in this case the stimuli are set to display words in the top left and bottom right of the screen.
 			// We will learn more about Stimuli in a later tutorial.
 			layout:[
-				{location:{left:0,top:0},media:{word:'top left'}},
-				{location:{left:'auto',right:0,top:'auto',bottom:0},media:{word:'bottom right'}}
+				{location:{left:0,top:0},media:{word:&quot;top left&quot;}},
+				{location:{left:&quot;auto&quot;,right:0,top:&quot;auto&quot;,bottom:0},media:{word:&quot;bottom right&quot;}}
 			],
 
 			// The stimuli property of the trial holds stimuli that are dynamicaly displayed durring the trial.
 			// These trials are not displayed by default, and can be affected by user interactions.
 			// Like the layout property the stimuli property holds an array of stimuli objects.
 			stimuli: [
-				{media :{word:'Hello world'}}
+				{media :{word:&quot;Hello world&quot;}}
 			],
 
 			// The interaction property of the trial is responsible for any interactions the user has through the trial.
@@ -141,17 +141,17 @@ define(['pipAPI'], function(APIconstructor) {
 				// 1. Display Stimulus
 				{
 					/* when we begin the trial (condition) */
-					conditions: [{type:'begin'}],
+					conditions: [{type:&quot;begin&quot;}],
 					/* show all stimuli (action) */
-					actions: [{type:'showStim',handle:'All'}]
+					actions: [{type:&quot;showStim&quot;,handle:&quot;All&quot;}]
 				},
 
 				// 2. End trial on space click
 				{
 					/* when space is clicked */
-					conditions: [{type:'inputEquals',value:'space'}],
+					conditions: [{type:&quot;inputEquals&quot;,value:&quot;space&quot;}],
 					/* end the trial */
-					actions: [{type:'endTrial'}]
+					actions: [{type:&quot;endTrial&quot;}]
 				}
 			]
 		}
@@ -161,7 +161,7 @@ define(['pipAPI'], function(APIconstructor) {
 
 	return API.script;
 });
-/* don't forget to close the require wrapper */</div>
+/* don&quot;t forget to close the require wrapper */</div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 <script src="../assets/playground.js"></script>
